# is1v4-0

./: .gitignore  CLAUDE.md  OPS_PROTOCOL.md  docker-compose.yml  phase_01_migration.md  phase_02_caching.md  pyproject.toml  schema_backup_v1.4.0_pre_IS1TR_p1.sql
backend/: config.py  main.py
backend/api/: health.py
backend/bk_rollbacks/: KnowledgeAllDocsView.jsx.bak  KnowledgeExplorer.jsx.bak  KnowledgeSearchView.jsx.bak  knowledge.py.bak
backend/routers/: campaigns.py  chat.py  folders.py  knowledge.py  observability.py  queries.py  specs.py  tags.py
backend/services/: __init__.py  caching.py
backend/thinkrouter/: context.py  dispatch.py  embedding.py  summarize.py  thinkrouter.py  thinkrouter_search.py  thinkrouter_usage.py
config/: routing.yaml  thinkrouter_models.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: md-viewer.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/campaigns/: CampaignsView.css  CampaignsView.jsx
frontend/src/components/chat/: ChatView.css  ChatView.jsx  MessageBubble.jsx  SourceCard.jsx
frontend/src/components/folders/: FolderSelector.css  FolderSelector.jsx  FoldersView.css  FoldersView.jsx
frontend/src/components/ingest/: IngestPanel.css  IngestPanel.jsx
frontend/src/config/: modules.js
frontend/src/styles/: tokens.css
frontend/src/tmp/: ChatView.css  FoldersView.css  KnowledgeDocDetail.css  KnowledgeHistoryView.css  KnowledgeMostRetrievedView.css  KnowledgeSearchView.css  ObservabilityDashboard.css  Toast.css
(+71 files in other folders)
